--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,7 @@
+application.args=4 -10 10 -1 0 0 -2
 compile.on.save=true
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\AdminNUS\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
