java obj func wrap to pass to Matlab
wrap the objective function in a class to be called in Matlab

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=scheduling_algorithm.Scheduling_algorithm
+main.class=scheduling_package.Scheduling_wrapper
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
