working version with call from matlab
remove the redundant package import of file exception handler and file
writer to make it available for Matlab call

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,7 @@ includes=**
 jar.compress=true
 javac.classpath=
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-source 1.6
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
